--- a/deploy/k8s/control.yaml
+++ b/deploy/k8s/control.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: drone-control
+  namespace: uav-sim
 spec:
   replicas: 1
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
         - name: control
-          image: drone-control:dev
+          image: uav-control:dev
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
